--- a/dotfiles/aerospace.toml
+++ b/dotfiles/aerospace.toml
@@ -1,11 +1,5 @@
-# Reference: https://github.com/i3/i3/blob/next/etc/config
-
-# i3 didn't have "normalizations" feature that why we disable them here.
-# But the feature is very helpful.
-# Normalizations eliminate all sorts of weird tree configurations that don't make sense.
-# Give normalizations a chance and enable them back.
 enable-normalization-flatten-containers = true
-enable-normalization-opposite-orientation-for-nested-containers = false
+enable-normalization-opposite-orientation-for-nested-containers = true
 
 [mode.main.binding]
 alt-enter = 'exec-and-forget open -n /Applications/Alacritty.app'
@@ -20,10 +14,6 @@ alt-shift-j = 'move down'
 alt-shift-k = 'move up'
 alt-shift-l = 'move right'
 
-# Consider using 'join-with' command as a 'split' replacement if you want to enable normalizations
-alt-g = 'split horizontal'
-alt-v = 'split vertical'
-
 alt-f = 'fullscreen'
 
 alt-s = 'layout v_accordion' # 'layout stacking' in i3
@@ -31,14 +21,6 @@ alt-w = 'layout h_accordion' # 'layout tabbed' in i3
 alt-e = 'layout tiles horizontal vertical' # 'layout toggle split' in i3
 
 alt-shift-space = 'layout floating tiling' # 'floating toggle' in i3
-
-# Not supported, because this command is redundant in AeroSpace mental model.
-# See: https://nikitabobko.github.io/AeroSpace/guide#floating-windows
-#alt-space = 'focus toggle_tiling_floating'
-
-# `focus parent`/`focus child` are not yet supported, and it's not clear whether they
-# should be supported at all https://github.com/nikitabobko/AeroSpace/issues/5
-# alt-a = 'focus parent'
 
 alt-1 = 'workspace 1'
 alt-2 = 'workspace 2'
