--- a/dotfiles/aerospace.toml
+++ b/dotfiles/aerospace.toml
@@ -57,10 +57,6 @@ enter = 'mode main'
 esc = 'mode main'
 
 [[on-window-detected]]
-if.app-id = 'com.spotify.client'
-run = 'move-node-to-workspace 8'
-
-[[on-window-detected]]
 if.app-id = 'org.alacritty'
 run = 'move-node-to-workspace 1'
 
@@ -69,9 +65,26 @@ if.app-id = 'org.mozilla.firefox'
 run = 'move-node-to-workspace 2'
 
 [[on-window-detected]]
-if.app-id = 'org.whispersystems.signal-desktop'
-run = 'move-node-to-workspace 10'
+if.app-id = 'com.spotify.client'
+run = 'move-node-to-workspace 8'
 
 [[on-window-detected]]
 if.app-id = 'ch.protonmail.desktop'
 run = 'move-node-to-workspace 9'
+
+[[on-window-detected]]
+if.app-id = 'org.whispersystems.signal-desktop'
+run = 'move-node-to-workspace 10'
+
+# W
+[[on-window-detected]]
+if.app-id = 'us.zoom.xos'
+run = 'move-node-to-workspace 10'
+
+[[on-window-detected]]
+if.app-id = 'com.tinyspeck.slackmacgap'
+run = 'move-node-to-workspace 10'
+
+[[on-window-detected]]
+if.app-id = 'com.google.Chrome'
+run = 'move-node-to-workspace 2'
