use brew bash and bash completion for k8s

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,5 +1,6 @@
 set-option -g history-limit 25000
 set -g mouse on
+set-option -g default-shell /opt/homebrew/bin/bash
 
 # for neovim
 set -sg escape-time 10
