tmux: open new window/pane in cwd

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -30,6 +30,12 @@ setw -g pane-base-index 1
 # reload configuration
 bind-key -r r source-file ~/.tmux.conf
 
+# open new window/pane in cwd
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
 # term colors, these are the correct ones according to neovim checkhealth
 set-option -g default-terminal "screen-256color"
+
 
