--- a/dotfiles/alacritty.toml
+++ b/dotfiles/alacritty.toml
@@ -1,5 +1,5 @@
-[shell]
-program = "/opt/homebrew/bin/bash"
+[terminal]
+shell = "/opt/homebrew/bin/bash"
 
 [font]
 normal.family = "SauceCodePro Nerd Font Mono"
