--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -10,6 +10,7 @@ set-option -g focus-events on
 setw -g mode-keys vi
 
 # status bar
+set -g status-right ""
 set -g status-style "fg=#665c54"
 set -g status-left-style "fg=#928374"
 
