come back to zsh

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,6 +1,6 @@
 set-option -g history-limit 25000
 set -g mouse on
-set-option -g default-shell /opt/homebrew/bin/bash
+set-option -g default-shell /bin/zsh
 
 # for neovim
 set -sg escape-time 10
