tmux: bind keys to swap windows

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -35,6 +35,10 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
+# swap windows
+bind-key S-Left swap-window -t -1
+bind-key S-Right swap-window -t +1
+
 # term colors, these are the correct ones according to neovim checkhealth
 set-option -g default-terminal "screen-256color"
 
